<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/old_background"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view__pager_city"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view__pager_city" />

    <TextView
        android:id="@+id/text_view_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_name"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_name_label" />


    <TextView
        android:id="@+id/text_view_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_location"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_name_value" />

    <TextView
        android:id="@+id/text_view_location_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_location"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_location_label" />
    <TextView
        android:id="@+id/text_view_period_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_period"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_location_value"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/text_view_period_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_period"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@id/text_view_period_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>







</androidx.constraintlayout.widget.ConstraintLayout>